# rustExampleBot

./: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker-build-push.yml
src/: config.rs  main.rs
