[package]
name = "rustExampleBot"
version = "0.1.0"
edition = "2024"

[dependencies]
teloxide = { version = "0.12", features = ["macros", "ctrlc_handler"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
